syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";

package com.dv.akka.clusterpoc;


message Job {
    option (scalapb.message).extends = "com.dv.akka.clusterpoc.models.Models.DVEvent";
    string url = 1;
    int32 evtType = 2;
}


message DvImpProto1 {
    option (scalapb.message).extends = "com.dv.akka.clusterpoc.models.Models.DVEvent";
    string f1 = 1;
    string f2 = 2;
    string f3 = 3;
    string f4 = 4;
    string f5 = 5;
    string f6 = 6;
    string f7 = 7;
    string f8 = 8;
    string f9 = 9;
    string f10 = 10;
    string f11 = 11;
    string f12 = 12;
    string f13 = 13;
    string f14 = 14;
    string f15 = 15;
    string f16 = 16;
    string f17 = 17;
    string f18 = 18;
    string f19 = 19;
    string f20 = 20;
    string f21 = 21;
    string f22 = 22;
    string f23 = 23;
    string f24 = 24;
    string f25 = 25;
    string f26 = 26;
    string f27 = 27;
    string f28 = 28;
    string f29 = 29;
    string f30 = 30;
    string f31 = 31;
    string f32 = 32;
    string f33 = 33;
    string f34 = 34;
    string f35 = 35;
    string f36 = 36;
    string f37 = 37;
    string f38 = 38;
    string f39 = 39;
    string f40 = 40;
    string f41 = 41;
    string f42 = 42;
    string f43 = 43;
    string f44 = 44;
    string f45 = 45;
    string f46 = 46;
    string f47 = 47;
    string f48 = 48;
    string f49 = 49;
    string f50 = 50;
    string f51 = 51;
    string f52 = 52;
    string f53 = 53;
    string f54 = 54;
    string f55 = 55;
    string f56 = 56;
    string f57 = 57;
    string f58 = 58;
    string f59 = 59;
    string f60 = 60;
    string f61 = 61;
    string f62 = 62;
    string f63 = 63;
    string f64 = 64;
    string f65 = 65;
    string f66 = 66;
    string f67 = 67;
    string f68 = 68;
    string f69 = 69;
    string f70 = 70;
    string f71 = 71;
    string f72 = 72;
    string f73 = 73;
    string f74 = 74;
    string f75 = 75;
    string f76 = 76;
    string f77 = 77;
    string f78 = 78;
    string f79 = 79;
    string f80 = 80;
    string f81 = 81;
    string f82 = 82;
    string f83 = 83;
    string f84 = 84;
    string f85 = 85;
    string f86 = 86;
    string f87 = 87;
    string f88 = 88;
    string f89 = 89;
    string f90 = 90;
    string f91 = 91;
    string f92 = 92;
    string f93 = 93;
    string f94 = 94;
    string f95 = 95;
    string f96 = 96;
    string f97 = 97;
    string f98 = 98;
    string f99 = 99;
    string f100 = 100;
    string f101 = 101;
    string f102 = 102;
    string f103 = 103;
    string f104 = 104;
    string f105 = 105;
    string f106 = 106;
    string f107 = 107;
    string f108 = 108;
    string f109 = 109;
    string f110 = 110;
    string f111 = 111;
    string f112 = 112;
    string f113 = 113;
    string f114 = 114;
    string f115 = 115;
    string f116 = 116;
    string f117 = 117;
    string f118 = 118;
    string f119 = 119;
    string f120 = 120;
    string f121 = 121;
    string f122 = 122;
    string f123 = 123;
    string f124 = 124;
    string f125 = 125;

}
message DvImpProto2 {
    option (scalapb.message).extends = "com.dv.akka.clusterpoc.models.Models.DVEvent";
    int32 f1 = 1;
    int32 f2 = 2;
    int32 f3 = 3;
    int32 f4 = 4;
    int32 f5 = 5;
    int32 f6 = 6;
    int32 f7 = 7;
    int32 f8 = 8;
    int32 f9 = 9;
    int32 f10 = 10;
    int32 f11 = 11;
    int32 f12 = 12;
    int32 f13 = 13;
    int32 f14 = 14;
    int32 f15 = 15;
    int32 f16 = 16;
    int32 f17 = 17;
    int32 f18 = 18;
    int32 f19 = 19;
    int32 f20 = 20;
    int32 f21 = 21;
    int32 f22 = 22;
    int32 f23 = 23;
    int32 f24 = 24;
    int32 f25 = 25;
    int32 f26 = 26;
    int32 f27 = 27;
    int32 f28 = 28;
    int32 f29 = 29;
    int32 f30 = 30;
    int32 f31 = 31;
    int32 f32 = 32;
    int32 f33 = 33;
    int32 f34 = 34;
    int32 f35 = 35;
    int32 f36 = 36;
    int32 f37 = 37;
    int32 f38 = 38;
    int32 f39 = 39;
    int32 f40 = 40;
    int32 f41 = 41;
    int32 f42 = 42;
    int32 f43 = 43;
    int32 f44 = 44;
    int32 f45 = 45;
    int32 f46 = 46;
    int32 f47 = 47;
    int32 f48 = 48;
    int32 f49 = 49;
    int32 f50 = 50;
    int32 f51 = 51;
    int32 f52 = 52;
    int32 f53 = 53;
    int32 f54 = 54;
    int32 f55 = 55;
    int32 f56 = 56;
    int32 f57 = 57;
    int32 f58 = 58;
    int32 f59 = 59;
    int32 f60 = 60;
    int32 f61 = 61;
    int32 f62 = 62;
    int32 f63 = 63;
    int32 f64 = 64;
    int32 f65 = 65;
    int32 f66 = 66;
    int32 f67 = 67;
    int32 f68 = 68;
    int32 f69 = 69;
    int32 f70 = 70;
    int32 f71 = 71;
    int32 f72 = 72;
    int32 f73 = 73;
    int32 f74 = 74;
    int32 f75 = 75;
    int32 f76 = 76;
    int32 f77 = 77;
    int32 f78 = 78;
    int32 f79 = 79;
    int32 f80 = 80;
    int32 f81 = 81;
    int32 f82 = 82;
    int32 f83 = 83;
    int32 f84 = 84;
    int32 f85 = 85;
    int32 f86 = 86;
    int32 f87 = 87;
    int32 f88 = 88;
    int32 f89 = 89;
    int32 f90 = 90;
    int32 f91 = 91;
    int32 f92 = 92;
    int32 f93 = 93;
    int32 f94 = 94;
    int32 f95 = 95;
    int32 f96 = 96;
    int32 f97 = 97;
    int32 f98 = 98;
    int32 f99 = 99;
    int32 f100 = 100;
    int32 f101 = 101;
    int32 f102 = 102;
    int32 f103 = 103;
    int32 f104 = 104;
    int32 f105 = 105;
    int32 f106 = 106;
    int32 f107 = 107;
    int32 f108 = 108;
    int32 f109 = 109;
    int32 f110 = 110;
    int32 f111 = 111;
    int32 f112 = 112;
    int32 f113 = 113;
    int32 f114 = 114;
    int32 f115 = 115;
    int32 f116 = 116;
    int32 f117 = 117;
    int32 f118 = 118;
    int32 f119 = 119;
    int32 f120 = 120;
    int32 f121 = 121;
    int32 f122 = 122;
    int32 f123 = 123;
    int32 f124 = 124;
    int32 f125 = 125;
}

message DvImpProto {
    option (scalapb.message).extends = "com.dv.akka.clusterpoc.models.Models.DVEvent";
    DvImpProto1 pr1 = 1;
    DvImpProto1 pr2 = 2;
    DvImpProto2 pr3 = 3;
    DvImpProto2 pr4 = 4;
    int32 evtType = 5;
}

message DvImpressionHuge {
    option (scalapb.message).extends = "com.dv.akka.clusterpoc.models.Models.DVEvent";
    int32 evtType = 1;
    bytes data  = 2;
}



